Uso de componentes de Bootstrap en las paginas

--- a/product.html
+++ b/product.html
@@ -22,9 +22,9 @@
     </head>
 
     <body>
-        <h1 id="productName">Atari 2600</h1>
+        <h1 id="productName">Lamborghini Gallardo</h1>
        
-        <img id="imgProduct" src="assets\images\atari2600.jpg" width="300px" />
+        <img id="imgProduct" src="assets\images\Lambo.jpg" width="300px" />
 
         <h2 id="productDetailsTitle">Detalles </h2>
 
@@ -68,27 +68,27 @@
         <table>
             <tr>
                 <td class="cell-header">Peso:</td>
-                <td>2 Libras</td>
+                <td>1 400 kg</td>
             </tr>
 
             <tr>
-                <td class="cell-header">Dimension:</td>
-                <td>30 x 20 10</td>
+                <td class="cell-header">Color:</td>
+                <td>Plateado</td>
             </tr>
 
             <tr>
                 <td class="cell-header">A&ntilde;o de Fabricaci&otilde;n: </td>
-                <td>1978</td>
+                <td>2016</td>
             </tr>
 
             <tr>
                 <td class="cell-header"> Condici&oacute;n:</td>
-                <td>Reaparado - Buen Estado</td>
+                <td>Nuevo: 0 km</td>
             </tr>
 
             <tr>
                 <td class="cell-header">Marca:</td>
-                <td>Atari 2600</td>
+                <td>Lamborghini Gallardo</td>
             </tr>
         </table>
 
