--- a/index.html
+++ b/index.html
@@ -6,11 +6,52 @@
 
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" 
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+
+        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
     </head>
 
     <body>
-        <h1> Mi E-Comerce</h1>
 
+        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="#">Mi E-commerce</a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" 
+              data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Productos</a>
+                  </li>
+                  <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                      Dropdown
+                    </a>
+                    <ul class="dropdown-menu">
+                      <li><a class="dropdown-item" href="#">Veh&iacute;culos</a></li>
+                      <li><a class="dropdown-item" href="#">Veh&iacute;culos Deportivos</a></li>
+                      <li><hr class="dropdown-divider"></li>
+                      <li><a class="dropdown-item" href="#">Veh&iacute;culos Ligeros</a></li>
+                    </ul>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link disabled" aria-disabled="true">Disabled</a>
+                  </li>
+                </ul>
+                <form class="d-flex" role="search">
+                  <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                  <button class="btn btn-outline-success" type="submit">Search</button>
+                </form>
+              </div>
+            </div>
+          </nav>
+
+        <!--
         <ul>
             <li>Home</li>
             <li>Productos</li>
@@ -19,27 +60,88 @@
         </ul>
 
         <hr>
+        -->
 
         <h1>Productos en Oferta</h1>
+
+        <nav aria-label="breadcrumb">
+            <ol class="breadcrumb">
+              <li class="breadcrumb-item"><a href="index.html">Home</a></li>
+              <li class="breadcrumb-item"><a href="product.html">Productos</a></li>
+              <li class="breadcrumb-item active" aria-current="page">Detalle de Productos</li>
+            </ol>
+          </nav>
+
+        <div class="content">
+            <div class="row">
+                <div class="col">
+                    <div class="card" style="width: 18rem;">
+                        <img src="assets\images\Lambo.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                          <h5 class="card-title">Lamborghini Gallardo</h5>
+                          <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
+                          <a href="#"  class="btn btn-primary">Detalle</a>
+                          <a href="#Lamborghinimoreinfo" data-bs-toggle="collapse" class="btn btn-secondary">Mas Informaci&oacute;n</a>
+                          <div class="collapse" id="Lamborghinimoreinfo">
+                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptas fugiat, ullam molestias nesciunt distinctio ducimus debitis quibusdam nostrum perspiciatis iusto.
+                          </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col">
+                    <div class="card" style="width: 18rem;">
+                        <img src="assets\images\Camaro.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                          <h5 class="card-title">Camaro</h5>
+                          <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. </p>
+                          <a href="#" class="btn btn-info">Detalle</a>
+                        </div>
+                    </div>
+                </div> 
+                <div class="col">
+                    <div class="card" style="width: 18rem;">
+                        <img src="assets\images\deportivo.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                          <h5 class="card-title">Auto Deportivo</h5>
+                          <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. </p>
+                          <a href="#" class="btn btn-primary">Detalle</a>
+                        </div>
+                    </div>
+                </div>   
+            </div>
+        </div>
+
+        <nav aria-label="Page navigation example">
+            <ul class="pagination">
+              <li class="page-item"><a class="page-link" href="#">Previous</a></li>
+              <li class="page-item"><a class="page-link" href="#">1</a></li>
+              <li class="page-item"><a class="page-link" href="#">2</a></li>
+              <li class="page-item"><a class="page-link" href="#">3</a></li>
+              <li class="page-item"><a class="page-link" href="#">Next</a></li>
+            </ul>
+          </nav>
+
+        <!--
 
         <table>
             <tr>
                 <td>
-                    <a href="product.html"><img src="assets\images\atari2600.jpg" width="300px" /></a>
-                    <p>Atari 2600</p>
+                    <a href="product.html"><img src="assets\images\Lambo.jpg" width="300px" /></a>
+                    <p>Lamborghini Gallardo</p>
                 </td>
                 <td>
-                    <a href="product.html"><img src="assets\images\snes.png" width="300px" alt="SNES" /></a>
-                    <p>Super Nintendo</p>
+                    <a href="product.html"><img src="assets\images\Camaro.jpg" width="300px" /></a>
+                    <p>Camaro</p>
                 </td>
                 <td>
-                    <a href="product.html"><img src="assets\images\nintendo_switch.png" width="300px" alt="Nintendo Switch" /></a>
-                    <p>Nintendo Switch</p>
+                    <a href="product.html"><img src="assets\images\deportivo.png" width="300px" /></a>
+                    <p>Deportivo</p>
                     
                 </td>
             </tr>
         </table>
-
+        -->
 
         <!-- 
         <p> Mi primer parrafo
