--- a/index.html
+++ b/index.html
@@ -1,14 +1,38 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="es" data-bs-theme="white">
 
     <head>
         <title>Bienvenido a Mi E-Commerce</title>
+
+        <link rel="stylesheet" href="assets/styles/workshop.css" />
 
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" 
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
+
+        <style>
+          .border-column{
+            border-right: 2px peachpuff;
+          }
+
+          .details{
+            background-color: darkseagreen;
+          }
+          .container-header{
+            background-color: darkseagreen;
+          }
+
+          .contenedor.hija{
+            font-size: 30px;
+          }
+
+          nav ul li a{
+            font-size: 30px;
+          }
+
+        </style>
     </head>
 
     <body>
@@ -51,6 +75,14 @@
             </div>
           </nav>
 
+        <nav>
+          <ul>
+            <li>
+              <a href="#">Productos</a>
+            </li>
+          </ul>
+        </nav>
+
         <!--
         <ul>
             <li>Home</li>
@@ -73,10 +105,10 @@
           </nav>
 
         <div class="content">
-            <div class="row">
-                <div class="col">
+            <div class="row gx-3">
+                <div class="col col-md-3">
                     <div class="card" style="width: 18rem;">
-                        <img src="assets\images\Lambo.jpg" class="card-img-top" alt="...">
+                        <img src="assets\images\Lambo.jpg" class="card-img-top img-fluid " alt="...">
                         <div class="card-body">
                           <h5 class="card-title">Lamborghini Gallardo</h5>
                           <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
@@ -89,28 +121,76 @@
                     </div>
                 </div>
 
-                <div class="col">
+                <div class="col col-md-3">
                     <div class="card" style="width: 18rem;">
-                        <img src="assets\images\Camaro.jpg" class="card-img-top" alt="...">
+                        <img src="assets\images\Camaro.jpg" class="card-img-top img-fluid " alt="...">
                         <div class="card-body">
                           <h5 class="card-title">Camaro</h5>
                           <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. </p>
-                          <a href="#" class="btn btn-info">Detalle</a>
+                          <a href="#" class="btn btn-info">Detalles</a>
                         </div>
                     </div>
-                </div> 
-                <div class="col">
+                </div>
+
+                <div class="col col-md-3">
                     <div class="card" style="width: 18rem;">
-                        <img src="assets\images\deportivo.png" class="card-img-top" alt="...">
+                        <img src="assets\images\deportivo.png" class="card-img-top img-fluid " alt="...">
                         <div class="card-body">
                           <h5 class="card-title">Auto Deportivo</h5>
                           <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. </p>
-                          <a href="#" class="btn btn-primary">Detalle</a>
+                          <a href="#" class="btn btn-primary">Detalles</a>
                         </div>
                     </div>
-                </div>   
+                </div> 
+                
+                <div class="col col-md-3">
+                  <div class="card" style="width: 18rem;">
+                      <img src="assets\images\Camaro.jpg" class="card-img-top img-fluid " alt="...">
+                      <div class="card-body">
+                        <h5 class="card-title">Camaro</h5>
+                        <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. </p>
+                        <a href="#" class="btn btn-info">Detalles</a>
+                      </div>
+                  </div>
+              </div>
+                
             </div>
         </div>
+
+        <table class="table table-striped table-hover table-border -table-sm">
+          <thead>
+            <tr class="table-primary">
+              <th class="border-column">#</th>
+              <th>Primer Nombre</th>
+              <th>Segundo Nombre</th>
+              <th>Edad</th>
+            </tr>
+          </thead>
+
+          <tbody class="table-group-divider">
+            <tr>
+              <td class="border-column">1</td>
+              <td>Joe</td>
+              <td>Doe</td>
+              <td>43</td>
+            </tr>
+
+            <tr>
+              <td class="border-column">2</td>
+              <td>Joe</td>
+              <td>Doe</td>
+              <td class="table-active">43</td>
+            </tr>
+
+            <tr>
+              <td class="border-column">3</td>
+              <td>Joe</td>
+              <td>Doe</td>
+              <td>43</td>
+            </tr>
+
+          </tbody>
+        </table>
 
         <nav aria-label="Page navigation example">
             <ul class="pagination">
