--- a/bonus.html
+++ b/bonus.html
@@ -1,76 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Productos Especiales</title>
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" 
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
+
     <style>
-      /*
-      .class1{
-        display: block;
-        background-color: cornflowerblue;
-        color: azure;
-      }*/
+        body {
+            padding: 20px;
+        }
 
-      .container{
-        display: flex;
-       /* flex-direction:row;
-        flex-wrap: wrap;*/
-        border: 1px solid;
-        flex-flow: row wrap ;
-        justify-content: flex-start;
-        align-items: flex-start;
-        height: 600px;
-        gap: 10px;
-      }
+        .container {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: space-between;
+            gap: 10px;
+        }
 
-      .container>div{
-        width: 100px;
-        height: 100px;
-        background-color:cornflowerblue ;
-        color: azure;
-      }
+        .container>div {
+            flex-grow: 1;
+            min-width: 100px;
+            min-height: 100px;
+            background-color: cornflowerblue;
+            color: azure;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-size: 1.5em;
+        }
 
-      .container>div.larger{
-        width: 150px;
-        height: 150px;
-        background-color:deeppink ;
-        color: azure;
-    }
+        .container>div.larger {
+            min-width: 150px;
+            min-height: 150px;
+            background-color: deeppink;
+        }
 
-    .container>div.first{
-        flex-grow: 1;
-    }
-
-    .container>div.second{
-        /*order: 3;*/
-        flex-grow: 1;
-    }
-
+        #Parrafo{
+            font-family: "Times New Roman", sans-serif;
+            font-size: 2em;
+        }
     </style>
-
 </head>
 
-<body>
-    Productos Especiales
-    <!--<div class="class1">Parrafo 1</div>
-    <div class="class2">Parrafo 2</div>-->
+<body class="container-fluid">
+    
+    <div id="Parrafo"  class="col">
+        <span>Productos Especiales</span>
+    </div>
 
     <div class="container">
-        <div>1</div>
-        <div class="second">2</div>
-        <div class="larger">3</div>
-        <div class="first">4</div>
-
-         <!--
-        <div>5</div>
-        <div>6</div>
-        <div>7</div>
-        <div>8</div>
-        <div>9</div>
-        <div>10</div>
-        <div>11</div>
-        <div>12</div>-->
+        <div class="col-sm-6 col-md-3">1</div>
+        <div class="col-sm-6 col-md-3 larger">2</div>
+        <div class="col-sm-6 col-md-3">3</div>
+        <div class="col-sm-6 col-md-3">4</div>
     </div>
 </body>
+
 </html>
