--- a/contact.html
+++ b/contact.html
@@ -1,48 +1,87 @@
 <!DOCTYPE html>
-
 <html lang="es">
-    
+
 <head>
-    <title>Cont&aacute;ctenos</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Contáctenos</title>
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" 
+    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
+
+    <style>
+        body {
+            background-color: #f8f9fa; /* Gris claro */
+            color: #495057; /* Gris oscuro */
+        }
+
+        h1 {
+            color: #007bff; /* Azul */
+            text-align: center;
+            margin-bottom: 30px;
+        }
+
+        form {
+            max-width: 600px;
+            margin: auto;
+        }
+
+        .form-group {
+            margin-bottom: 20px;
+        }
+
+        label {
+            font-weight: bold;
+            color: #343a40; /* Gris más oscuro */
+        }
+
+        textarea {
+            resize: vertical;
+        }
+
+        button {
+            background-color: #007bff; /* Azul */
+            color: #fff; /* Blanco */
+            border: none;
+            padding: 10px 20px;
+            cursor: pointer;
+        }
+
+        button:hover {
+            background-color: #0056b3; /* Azul más oscuro */
+        }
+    </style>
 </head>
 
-<body>
-    <h1>Cont&aacute;ctenos</h1>
+<body class="container mt-5">
+
+    <h1>Contáctenos</h1>
 
     <form>
-        <label>Nombre</label>
-        <input type="text"/>
-        <br />
-        <label>Email</label>
-        <input type="email"/>
-        <br />
-        <label>Comentario</label>
-        <textarea cols="30" rows="10"></textarea>
-        <br />
-        <input type="button" value="Enviar" />
+        <div class="form-group">
+            <label for="nombre" class="mb-3">Nombre</label>
+            <input type="text" class="form-control" id="nombre" placeholder="Ingrese su nombre">
+        </div>
 
+        <div class="form-group">
+            <label for="email" class="mb-3">Email</label>
+            <br>
+            <input type="email" class="form-control" id="email" placeholder="Ingrese su email">
+        </div>
 
-        <!--
-        <label>Fecha</label>
-        <input type="date"/>
-        <br />
-        <label>Clave</label>
-        <input type="password"/>
-        <br />
-        <label>Radio</label>
-        <input type="radio"/>
-        <input type="radio"/>
-        <input type="checkbox"/>
-        <input type="number"/>
-        <input type="time"/>
-        <input type="color"/>
-        <input type="image"/>
-        <input type="file"/>
-        <input type="button" value="Texto"/>
-        <input type="hidden"/>
-        <br /> -->
+        <div class="form-group">
+            <label for="comentario" class="mb-3">Comentario</label>
+            <textarea class="form-control" id="comentario" rows="5" placeholder="Ingrese su comentario"></textarea>
+        </div>
+
+        <button type="submit" class="btn btn-primary">Enviar</button>
 
     </form>
 
+   
 </body>
+
 </html>
